src/test/deca/context/valid/created/decl-int-var.deca
//Description :
// Declaration d'une variable entière avec initialisation
//
// Resultats :
//


{
    int x = 1;
}
