src/test/deca/context/invalid/created/class-two-fields-same.deca
//Description :
// Test de déclaration de classe avec deux arguements de meme nom
//
// Resultats :
// Erreur


class Premiere {
    int x = 2;
    int x = 3;
}

{}
